--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         </ul>
       </nav>
       <h3>WEEK 2</h3>
+      <nav>
+        <ul>
+          <li><a href="week02/challenges/01-option.html" target="_blank">Challenge 01</a></li>
+          <li><a href="week02/challenges/02-option.html" target="_blank">Challenge 02</a></li>
+          <li><a href="week02/challenges/03-option.html" target="_blank">Challenge 03</a></li>
+        </ul>
+      </nav>
     </nav>
   </main>
 </body>
