--- a/week02/challenges/02-option.html
+++ b/week02/challenges/02-option.html
@@ -25,11 +25,15 @@
     .container .form {
       font-weight: normal;
       background: rgb(240, 240, 240);
-      width: 20%;
+      width: 30%;
       /* for center, set margin to auto */
       margin: auto;
       padding: 15px 35px;
       margin-top: 50px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     .container .form .form-label {
