--- a/week02/challenges/03-option.html
+++ b/week02/challenges/03-option.html
@@ -24,11 +24,15 @@
     .container .form {
       font-weight: normal;
       background: rgba(119, 182, 255, 0.2);
-      width: 20%;
+      width: 30%;
       /* for center, set margin to auto */
       margin: auto;
       padding: 15px 35px;
       margin-top: 50px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     .container .form .form-label {
