--- a/week02/challenges/01-option.html
+++ b/week02/challenges/01-option.html
@@ -30,7 +30,7 @@
     }
 
     .container .form {
-      width: 18vw;
+      width: 100vw;
       margin: auto;
       padding-top: 15px;
     }
@@ -40,13 +40,14 @@
       margin: auto;
       margin-bottom: 15px;
       height: 50px;
-      width: 100%;
+      width: 20%;
     }
 
     .container .form .submitButton {
       width: 100px;
       height: 35px;
       border: none;
+      border-radius: 3px;
       background-color:rgb(0, 165, 82);
       color: white;
     }
