--- a/week02/challenges/01-option.html
+++ b/week02/challenges/01-option.html
@@ -30,7 +30,7 @@
     }
 
     .container .form {
-      width: 25vw;
+      width: 100vw;
       margin: auto;
       padding-top: 15px;
     }
@@ -40,7 +40,7 @@
       margin: auto;
       margin-bottom: 15px;
       height: 50px;
-      width: 100%;
+      width: 300px;
     }
 
     .container .form .submitButton {
@@ -49,7 +49,6 @@
       border: none;
       background-color:rgb(0, 165, 82);
       color: white;
-      -webkit-appearance: none;
     }
 
 
