--- a/week02/challenges/01-option.html
+++ b/week02/challenges/01-option.html
@@ -47,11 +47,17 @@
       width: 100px;
       height: 35px;
       border: none;
+      border-radius: 3px;
       background-color:rgb(0, 165, 82);
       color: white;
+      -webkit-appearance: none;
     }
 
-
+    .container .form .submitButton:hover {
+      background-color: rgb(255, 61, 61);
+      cursor: pointer;
+      border: none;
+    }
   </style>
 </head>
 <body>
