--- a/week02/challenges/02-option.html
+++ b/week02/challenges/02-option.html
@@ -61,6 +61,7 @@
 
     .container .form .checkboxButton {
       margin-top: 20px;
+      display: block;
     }
 
     .container .form .submitButton {
