--- a/week02/challenges/03-option.html
+++ b/week02/challenges/03-option.html
@@ -2,6 +2,112 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>03-Option</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: white;
+      font-family: sans-serif;
+      margin-block-start: 5vh;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    .container {
+      background-color:rgba(119, 182, 255, 0.2);
+      max-width: 350px;
+      max-height: 800px;
+      margin: auto;
+    }
+
+    .container .form {
+      margin: auto;
+      max-width: 300px;
+      padding-top: 30px;
+      padding-bottom: 10px;
+    }
+
+    .container .form .formLabel {
+      display: block;
+      padding-top: 15px;
+      padding-left: 10px;
+      font-size: small;
+    }
+
+    .container .form .formInput {
+      height: 30px;
+    }
+
+    .container .form .formInput, .formTextarea {
+      width: 100%;
+    }
+
+    .container .form .formTextarea {
+      height: 300px;
+      resize: vertical;
+      max-height: 150px;
+      min-height: 50px;
+    }
+
+    .container .form .submitButton {
+      display: flex;
+      align-content: center;
+      margin: 0 auto;
+      margin-top: 30px;
+      width: 100px;
+      height: 35px;
+      border: none;
+      background-color:rgba(0, 119, 255, 0.2);
+      color: white;
+      -webkit-appearance: none;
+    }
+
+    .container .form .submitButton:hover {
+      background-color: rgba(0, 119, 255, 1);
+      cursor: pointer;
+      border: none;
+    }
+
+
+  </style>
+</head>
+<body>
+  <main>
+    <section class="container">
+      <form class="form">
+        <h1>Contact Form</h1>
+        <label for="firstName" class="formLabel">First Name</label>
+        <input type="text" id="firstName" class="formInput" required pattern="[A-Z a-z]{6,}" placeholder="John">
+        <label for="lastName" class="formLabel">Last Name</label>
+        <input type="text" id="lastName" class="formInput" required pattern="[A-Z a-z]{6,}" placeholder="Doe">
+        <label for="email" class="formLabel">Email</label>
+        <input type="email" id="email" class="formInput" required pattern="[A-Z a-z 0-9]{1,}@[A-Z a-z 0-9]{1,}.[A-Z a-z]{2,}" placeholder="you@domain.com">
+        <label for="message" class="formLabel">Message</label>
+        <textarea id="message" class="formTextarea" required placeholder="Enter your message here..." minlength="20" maxlength="140"></textarea>
+        <input type="submit" value="Submit" class="submitButton">
+      </form>
+
+    </section>
+  </main>
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>03-Option</title>
   <style>
@@ -24,15 +130,16 @@
     .container .form {
       font-weight: normal;
       background: rgba(119, 182, 255, 0.2);
-      width: 30%;
+      width: 100%;
+      height: 100vh;
       /* for center, set margin to auto */
       margin: auto;
       padding: 15px 35px;
-      margin-top: 50px;
-      position: absolute;
+      /* margin-top: 50px; */
+      /* position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); */
     }
 
     .container .form .form-label {
@@ -92,11 +199,11 @@
         <label for="email" class="form-label">Email</label>
         <input type="email" id="email" class="form-input" required pattern="[A-Z a-z 0-9]{1,}@[A-Z a-z 0-9]{1,}.[A-Z a-z]{2,}" placeholder="you@domain.com">
         <label for="message" class="form-label">Message</label>
-        <textarea id="message" class="form-textarea" required placeholder="Enter your message here..."></textarea>
+        <textarea id="message" class="form-textarea" required placeholder="Enter your message here..." minlength="20" maxlength="140"></textarea>
         <input type="submit" value="Submit" class="button-submit">
       </form>
 
     </section>
   </main>
 </body>
-</html>
+</html> -->
