--- a/week02/challenges/03-option.html
+++ b/week02/challenges/03-option.html
@@ -47,6 +47,7 @@
 
     .container .form .formInput {
       height: 30px;
+      padding-left: 3px;
     }
 
     .container .form .formInput, .formTextarea {
@@ -58,12 +59,14 @@
       resize: vertical;
       max-height: 150px;
       min-height: 50px;
+      padding-left: 10px;
+      padding-top: 10px;
     }
 
     .container .form .submitButton {
-      display: flex;
-      align-content: center;
-      margin: 0 auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
       margin-top: 30px;
       width: 100px;
       height: 35px;
