--- a/index.html
+++ b/index.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Challenges</title>
-</head>
-<body>
-  <header>
-    <h1 style="text-align: center">Web Development: Front End</h1>
-  </header>
-  <main>
-    <nav>
-      <h3>WEEK 1</h3>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Challenges</title>
+    <style>
+      * {
+        font-family: Verdana;
+      }
+
+      a {
+        text-decoration:none;
+      }
+
+      h1, h4 {
+        text-align: center;
+      }
+    </style>
+
+  </head>
+  <body>
+    <header>
+      <h1>Web Development: Front End</h1>
+      <h4>(Powered by Marcell Llerena)</h4>
+    </header>
+    <main>
       <nav>
-        <ul>
-          <li><a href="week01/challenges/01-option.html" target="_blank">Challenge 01</a></li>
-          <li><a href="week01/challenges/02-option.html" target="_blank">Challenge 02</a></li>
-          <li><a href="week01/challenges/03-option.html" target="_blank">Challenge 03</a></li>
-          <li><a>The Graphic Adventure</a></li>
-        </ul>
+        <h3>WEEK 1</h3>
+        <nav>
+          <ul>
+            <li><a href="week01/challenges/01-option.html" target="_blank">Challenge 01</a></li>
+            <li><a href="week01/challenges/02-option.html" target="_blank">Challenge 02</a></li>
+            <li><a href="week01/challenges/03-option.html" target="_blank">Challenge 03</a></li>
+            <li><a href="week01/challenges/collar.html">The Graphic Adventure</a></li>
+          </ul>
+        </nav>
+        <h3>WEEK 2</h3>
+        <nav>
+          <ul>
+            <li><a href="week02/challenges/01-option.html" target="_blank">Challenge 01</a></li>
+            <li><a href="week02/challenges/02-option.html" target="_blank">Challenge 02</a></li>
+            <li><a href="week02/challenges/03-option.html" target="_blank">Challenge 03</a></li>
+          </ul>
+        </nav>
+        <h3>WEEK 3</h3>
+        <nav>
+          <ul>
+            <li><a href="week03/challenges/01-option.html" target="_blank">Challenge 01</a></li>
+          </ul>
+        </nav>
       </nav>
-      <h3>WEEK 2</h3>
-      <nav>
-        <ul>
-          <li><a href="week02/challenges/01-option.html" target="_blank">Challenge 01</a></li>
-          <li><a href="week02/challenges/02-option.html" target="_blank">Challenge 02</a></li>
-          <li><a href="week02/challenges/03-option.html" target="_blank">Challenge 03</a></li>
-        </ul>
-      </nav>
-    </nav>
-  </main>
-</body>
+    </main>
+  </body>
 </html>
