--- a/week02/challenges/03-option.html
+++ b/week02/challenges/03-option.html
@@ -47,7 +47,6 @@
 
     .container .form .formInput {
       height: 30px;
-      padding-left: 5px;
     }
 
     .container .form .formInput, .formTextarea {
@@ -59,14 +58,12 @@
       resize: vertical;
       max-height: 150px;
       min-height: 50px;
-      padding-left: 10px;
-      padding-top: 10px;
     }
 
     .container .form .submitButton {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+      display: flex;
+      align-content: center;
+      margin: 0 auto;
       margin-top: 30px;
       width: 100px;
       height: 35px;
@@ -105,108 +102,3 @@
   </main>
 </body>
 </html>
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>03-Option</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: white;
-      font-family: sans-serif;
-      /* -webkit-background-size: cover;
-      background-size: cover;
-      background-attachment: fixed; */
-    }
-
-    .container .form {
-      font-weight: normal;
-      background: rgba(119, 182, 255, 0.2);
-      width: 100%;
-      height: 100vh;
-      /* for center, set margin to auto */
-      margin: auto;
-      padding: 15px 35px;
-      /* margin-top: 50px; */
-      /* position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); */
-    }
-
-    .container .form .form-label {
-      display: block;
-      padding: 15px 0 0 10px;
-      font-size: small;
-    }
-
-    .container .form .form-input, .form-textarea {
-      width: 100%;
-    }
-
-    .container .form .form-textarea {
-      height: 200px;
-      resize: vertical;
-      max-height: 150px;
-      min-height: 50px;
-    }
-
-    input[type="submit"]{
-      display: block;
-      margin: 0 auto;
-    }
-
-    .container .form .form-title{
-      text-align: center;
-      font-size: large;
-    }
-
-    .container .form .button-submit {
-      display: block;
-      margin-top: 20px;
-      border-radius: 5px;
-      height: 40px;
-      width: 30%;
-      color: white;
-      background-color: rgba(0, 140, 255, 0.5);
-      border: none;
-    }
-
-    .container .form .button-submit:hover {
-      background-color: rgb(0, 140, 255);
-      cursor: pointer;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-  <main>
-    <section class="container">
-      <form class="form">
-        <h1 class="form-title">Contact Form</h1>
-        <label for="firstName" class="form-label">First Name</label>
-        <input type="text" id="firstName" class="form-input" required pattern="[A-Z a-z]{6,}" placeholder="John">
-        <label for="lastName" class="form-label">Last Name</label>
-        <input type="text" id="lastName" class="form-input" required pattern="[A-Z a-z]{6,}" placeholder="Doe">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" class="form-input" required pattern="[A-Z a-z 0-9]{1,}@[A-Z a-z 0-9]{1,}.[A-Z a-z]{2,}" placeholder="you@domain.com">
-        <label for="message" class="form-label">Message</label>
-        <textarea id="message" class="form-textarea" required placeholder="Enter your message here..." minlength="20" maxlength="140"></textarea>
-        <input type="submit" value="Submit" class="button-submit">
-      </form>
-
-    </section>
-  </main>
-</body>
-</html> -->
