--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <nav>
           <ul>
             <li><a href="week03/challenges/01-option.html" target="_blank">Challenge 01</a></li>
+            <li><a href="week03/challenges/02-option.html" target="_blank">Challenge 02</a></li>
           </ul>
         </nav>
       </nav>
