--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             <li><a href="week03/challenges/02-option.html" target="_blank">Challenge 02</a></li>
           </ul>
         </nav>
+        <h3>WEEK 4</h3>
+        <nav>
+          <ul>
+            <li><a href="week04/challenges/01-option.html" target="_blank">Challenge 01</a></li>
+            <li><a href="week04/challenges/02-option.html" target="_blank">Challenge 02</a></li>
+          </ul>
+        </nav>
       </nav>
     </main>
   </body>
