--- a/week04/challenges/02-option.html
+++ b/week04/challenges/02-option.html
@@ -215,6 +215,10 @@
         grid-row: 4 / 5;
       }
 
+      li {
+        margin-right: 10px;
+      }
+
       .item1 {
         grid-column: 3 / 9;
         grid-row: 5 / 7;
