--- a/week04/challenges/02-option.html
+++ b/week04/challenges/02-option.html
@@ -172,7 +172,8 @@
 
     img {
       height: 60%;
-      min-width: 5%;
+      /* min-width: 5%; */
+      min-height: 10%;
       /* max-height: 100px;
       max-width: 100px; */
     }
@@ -217,6 +218,11 @@
 
       li {
         margin-right: 10px;
+      }
+
+      nav > ul{
+        display: flex;
+        justify-content: end;
       }
 
       .item1 {
