--- a/week04/challenges/02-option.html
+++ b/week04/challenges/02-option.html
@@ -19,7 +19,7 @@
       display: grid;
       /* grid-template-columns: repeat(10, 10fr); */
       grid-template-columns: repeat(autofill, minmax(50px, 10fr));
-      /* grid-template-rows: repeat(9, minmax(500px, autofill)); */
+      grid-template-rows: repeat(9, minmax(500px, autofill));
       /* grid-template-rows: repeat(9, minmax(100px, auto)); */
       /* grid-template-columns: repeat(autofill, minmax(300px, 1fr)); */
       /* grid-template-rows: minmax(50px, 100px); */
@@ -173,7 +173,7 @@
     }
 
     img {
-      height: 80%;
+      height: 50%;
 
       /* padding: 50px 50px; */
       /* height: 100%;
