--- a/week04/challenges/02-option.html
+++ b/week04/challenges/02-option.html
@@ -50,7 +50,7 @@
 
     nav > ul{
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
     }
 
     ul {
@@ -112,7 +112,7 @@
     }
 
     .items {
-      background-color: rgba(211, 211, 211, 0.5);
+      background-color: #eee;
       border-radius: 10px;
       display: flex;
       justify-content: center;
