--- a/week04/challenges/02-option.html
+++ b/week04/challenges/02-option.html
@@ -237,10 +237,10 @@
         margin-right: 10px;
       }
 
-      nav > ul{
+      /* nav > ul{
         display: flex;
-        justify-content: end;
-      }
+        justify-content: flend;
+      } */
 
       .item1 {
         grid-column: 3 / 9;
