--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
             <li><a href="week04/challenges/02-option.html" target="_blank">Challenge 02</a></li>
           </ul>
         </nav>
+	<h3>WEEK 5</h3>
+        <nav>
+          <ul>
+            <li><a href="week05/challenge.html" target="_blank">Challenges 01|02|03</a></li>
+          </ul>
+	</nav>
       </nav>
     </main>
   </body>
