--- a/index.html
+++ b/index.html
@@ -56,12 +56,18 @@
             <li><a href="week04/challenges/02-option.html" target="_blank">Challenge 02</a></li>
           </ul>
         </nav>
-	<h3>WEEK 5</h3>
+        <h3>WEEK 5</h3>
         <nav>
           <ul>
             <li><a href="week05/challenge.html" target="_blank">Challenges 01|02|03</a></li>
           </ul>
-	</nav>
+        </nav>
+        <h3>WEEK 6</h3>
+        <nav>
+          <ul>
+            <li><a href="week06/challenge.html" target="_blank">Challenges 01|02|03 (ver1.0)</a></li>
+          </ul>
+        </nav>
       </nav>
     </main>
   </body>
