--- a/week06/challenge.html
+++ b/week06/challenge.html
@@ -153,6 +153,14 @@
             margin-left: 50px;
         }
 
+        input[type="checkbox"] {
+            -webkit-appearance: checkbox !important;
+            -moz-appearance: checkbox !important;
+            -ms-appearance: checkbox !important;
+            -o-appearance: checkbox !important;
+            appearance: checkbox !important;
+        }
+
 
     </style>
 </head>
