--- a/week06/challenge.html
+++ b/week06/challenge.html
@@ -49,6 +49,7 @@
             position: absolute;
             right: 0px;
             -webkit-appearance: none;
+            border-width: 0px;
         }
 
         .button:hover {
@@ -159,6 +160,10 @@
             -ms-appearance: checkbox !important;
             -o-appearance: checkbox !important;
             appearance: checkbox !important;
+        }
+
+        input[type=text] {
+            -webkit-appearance: searchfield;
         }
 
 
