try responsive week06

--- a/week06/challenge.html
+++ b/week06/challenge.html
@@ -58,7 +58,7 @@
 
         .containerDiv {
             height: 50%;
-            margin: 10px 50px;
+            margin: 10px 10px;
             background-color: rgb(216, 216, 216);
             border-radius: 10px;
             display: flex;
@@ -162,9 +162,9 @@
             appearance: checkbox !important;
         }
 
-        input[type=text] {
+        /* input[type=text] {
             -webkit-appearance: searchfield;
-        }
+        } */
 
 
     </style>
