try responsive week06

--- a/week06/challenge.html
+++ b/week06/challenge.html
@@ -166,6 +166,15 @@
             -webkit-appearance: searchfield;
         } */
 
+        .readItem {
+            border: rgba(128, 128, 128, 0.507);
+            border-radius: 5px;
+            width: 25%;
+        }
+
+        .readItem > li {
+            margin: 4px 1px;
+        }
 
     </style>
 </head>
@@ -242,7 +251,7 @@
 
         <div class="readme">
             <h3>Readme</h3>
-            <ul>
+            <ul class="readItem">
                 <li>DONE: Change the state of tasks to DONE</li>
                 <li>ALL: Delete all tasks</li>
                 <li>RECOVER: Recover all deleted tasks</li>
