--- a/week06/challenge.html
+++ b/week06/challenge.html
@@ -35,6 +35,7 @@
 
         .input {
             width: 100%;
+            height: 40px;
         }
 
         .button {
@@ -50,6 +51,7 @@
             right: 0px;
             -webkit-appearance: none;
             border-width: 0px;
+            height: 40px;
         }
 
         .button:hover {
