--- a/week06/challenge.html
+++ b/week06/challenge.html
@@ -52,10 +52,11 @@
             -webkit-appearance: none;
             border-width: 0px;
             height: 40px;
+            width: 100px;
         }
 
-        .button:hover {
-            color: black;
+        .button:active {
+            background-color: #116435e5;
         }
 
         .containerDiv {
@@ -172,6 +173,8 @@
             border: rgba(128, 128, 128, 0.507);
             border-radius: 5px;
             width: 25%;
+            font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 14px;
         }
 
         .readItem > li {
@@ -256,7 +259,7 @@
             <ul class="readItem">
                 <li>DONE: Change the state of tasks to DONE</li>
                 <li>ALL: Delete all tasks</li>
-                <li>RECOVER: Recover all deleted tasks</li>
+                <li>RECOVER: Recover all deleted tasks from Local Storage</li>
             </ul>
         </div>
     </div>
