--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
             <li><a href="week06/challenge.html" target="_blank">Challenges 01|02|03 (ver1.0)</a></li>
           </ul>
         </nav>
+        <h3>WEEK 6</h3>
+        <nav>
+          <ul>
+            <li><a href="week07/challenge.html" target="_blank">Challenges 01</a></li>
+          </ul>
+        </nav>
       </nav>
     </main>
   </body>
