--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <nav>
           <ul>
             <li><a href="week07/challenge.html" target="_blank">Challenges 01</a></li>
+            <li><a href="week09/todo-list/build/index.html">Test</a></li>
           </ul>
         </nav>
       </nav>
