--- a/index.html
+++ b/index.html
@@ -65,14 +65,25 @@
         <h3>WEEK 6</h3>
         <nav>
           <ul>
-            <li><a href="week06/challenge.html" target="_blank">Challenges 01|02|03 (ver1.0)</a></li>
+            <li><a href="week06/challenge.html" target="_blank">Challenges 01|02|03</a></li>
           </ul>
         </nav>
         <h3>WEEK 7</h3>
         <nav>
           <ul>
+            <li><a href="week07/challenge.html" target="_blank">Challenge 01</a></li>
+          </ul>
+        </nav>
+        <h3>WEEK 8</h3>
+        <nav>
+          <ul>
             <li><a href="week07/challenge.html" target="_blank">Challenges 01</a></li>
-            <li><a href="week09/todo-list/build">Test</a></li>
+          </ul>
+        </nav>
+        <h3>WEEK 9</h3>
+        <nav>
+          <ul>
+            <li><a href="week09/02-challenge/" target="_blank">Challenge 02</a></li>
           </ul>
         </nav>
       </nav>
