--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <li><a href="week01/challenges/01-option.html" target="_blank">Challenge 01</a></li>
             <li><a href="week01/challenges/02-option.html" target="_blank">Challenge 02</a></li>
             <li><a href="week01/challenges/03-option.html" target="_blank">Challenge 03</a></li>
-            <li><a href="week01/challenges/collar.html">The Graphic Adventure</a></li>
           </ul>
         </nav>
         <h3>WEEK 2</h3>
@@ -83,6 +82,7 @@
         <h3>WEEK 9</h3>
         <nav>
           <ul>
+            <li><a href="week09/01-challenge/" target="_blank">Challenge 01</a></li>
             <li><a href="week09/02-challenge/" target="_blank">Challenge 02</a></li>
           </ul>
         </nav>
