--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h3>WEEK 8</h3>
         <nav>
           <ul>
-            <li><a href="week07/challenge.html" target="_blank">Challenges 01</a></li>
+            <li><a href="week08/03-challenge/" target="_blank">Challenges 03</a></li>
           </ul>
         </nav>
         <h3>WEEK 9</h3>
